# LakeAgent

./: .env.example  .gitignore  README.md  [iSE Summer Challenge 2026] Questions - Sheet1.csv  answers copy.csv  answers.csv  batch_answer_questions.py  main.py  pyproject.toml  question.xlsx  run_colab_document_indexing.py  run_indexing.py  submission.csv  team-3.csv  team-4.csv  test.ipynb
Data-Lake/: 01_smart_library_renovation.txt  02_river_cleanup_community_project.txt  03_mountain_farming_climate_shift.txt  04_ai_customer_support_startup.txt  05_city_bus_schedule_redesign.txt  class_grades.sql  ise.md  workshop_03.22.m4a  关羽 - 维基百科，自由的百科全书.html  刘备 - 维基百科，自由的百科全书.html  诸葛亮 - 维基百科，自由的百科全书.html
Data-Lake/KTCT/: 2NewCh3sửa.ppt  2NewCh5KTTTrXHCNsửa.ppt  Chương1.docx  TONG-HOP-QUIZ.docx  đề-thi-giữa-kì.docx
Data-Lake/archeology/: climateMeasurements.xlsx  conflict_brecke.csv  radiocarbon_database_regional.xlsx
Data-Lake/biomedical/: 1-s2.0-S0092867420301070-mmc3.xlsx  1-s2.0-S0092867420301070-mmc4.xlsx  1-s2.0-S0092867420301070-mmc5.xlsx  1-s2.0-S0092867420301070-mmc7.xlsx  hyperactivated.csv
deployments/docker/: docker-compose.yaml
scripts/: index_state_json.py
src/lake_agent/: __init__.py  config.py
src/lake_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lake_agent/cli/: import_document_jsonl.py  index_audio.py  index_database.py  index_document.py  index_document_offline.py  index_epub.py  index_image.py  index_json.py  index_slideshow.py  index_sql_script.py  index_tabular.py  index_text.py  index_video.py  index_web.py  inventory.py  run_qa.py
src/lake_agent/domain/: __init__.py  enums.py  models.py
src/lake_agent/domain/indexing_models/: __init__.py  audio.py  audio_enrichment.py  database.py  database_enrichment.py  document.py  document_enrichment.py  epub.py  epub_enrichment.py  image.py  image_enrichment.py  json.py  slideshow.py  slideshow_enrichment.py  sql_script.py  sql_script_enrichment.py  tabular.py  tabular_enrichment.py  text.py  (+4 more)
src/lake_agent/indexing/: __init__.py
src/lake_agent/inventory/: __init__.py  hasher.py  identifier.py  scanner.py  service.py
src/lake_agent/persistence/: __init__.py  database.py  repositories.py  schema.sql
src/lake_agent/qa/: agents.py  pipeline.py  retriever.py
src/lake_agent/storage/: __init__.py  base.py  local_store.py  minio_store.py
src/lake_agent/tools/: __init__.py  retrieval.py
tests/: test_database_indexing.py  test_document_indexing.py  test_epub_indexing.py  test_image_indexing.py  test_inventory.py  test_json_indexing.py  test_qa_pipeline.py  test_retrieval_tools.py  test_slideshow_indexing.py  test_sql_script_indexing.py  test_summary_sampling.py  test_tabular_enrichment.py  test_tabular_indexing.py  test_tabular_persistence.py  test_text_indexing.py  test_web_indexing.py
(+71 files in other folders)
