[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "lake-agent"
version = "0.1.0"
description = "Multi-modal data lake inventory and question answering"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-postgres",
    "langchain-openai",
    "deepagents",
    "pydantic>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
lake-inventory = "lake_agent.cli.inventory:main"
lake-index-tabular = "lake_agent.cli.index_tabular:main"
lake-index-text = "lake_agent.cli.index_text:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
